--- a/dkms.conf
+++ b/dkms.conf
@@ -1,4 +1,4 @@
-
+# 这个 DKMS 配置文件的功能是定义了一个名为 "nv_peer_mem" 版本为 "1.3" 的模块的构建、安装和清理规则，以便在系统中动态管理该模块，并在安装新内核时自动重新构建和安装。
 # DKMS module name and version
 PACKAGE_NAME="nv_peer_mem"
 PACKAGE_VERSION="1.3"
